--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.4",
-    "recharts": "^2.2.0"
+    "recharts": "^2.2.0",
+    "sweetalert2": "^11.7.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
